--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.18.1",
     "axios": "^1.7.2",
     "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
