--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.44.0",
     "@tanstack/react-query-devtools": "^5.45.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "antd": "^5.18.1",
     "axios": "^1.7.2",
     "i18next": "^23.11.5",
@@ -21,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
