--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
